--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="build_v1.1/build_v1.1.exe"
+export_path="builds/windows_build/build_v1.2.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -50,7 +50,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="android_build/build_v1.1.apk"
+export_path="builds/android_build/build_v1.2.apk"
 script_export_mode=1
 script_encryption_key=""
 
