--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -65,7 +65,7 @@ custom_build/target_sdk=""
 architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=false
-architectures/x86_64=false
+architectures/x86_64=true
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
@@ -76,8 +76,8 @@ one_click_deploy/clear_previous_install=false
 version/code=1
 version/name="1.0"
 package/unique_name="org.godotengine.$genname"
-package/name=""
-package/signed=true
+package/name="AkiGame"
+package/signed=false
 package/classify_as_game=true
 package/retain_data_on_uninstall=false
 package/exclude_from_recents=false
